optimize actions to launch immediately (#1458)
* optimize actions to launch immediately

* remove extent report support

+ optimize logger file initialization
+ change allure back to the default reporter

* reformatting code

* screenshot and lazy loading optimizations

- screenshot logic optimization
- screenshot and animated gif classes restructure
- fix scaling issue with fullPageScreenshot using google cdp
- virtual thread implementation for faster waitForLazyLoading
-

* wait for attacheable report generation